fixed map cropping

--- a/css/style.css
+++ b/css/style.css
@@ -419,5 +419,5 @@ div#printable{
 
 		div#printable div#embed_map_here,
 		div#printable div#embed_map_here svg{
-			height: 600px;
+			height: 1040px;
 		}
